--- a/main.css
+++ b/main.css
@@ -1,10 +1,10 @@
  body {
     background-color: #f0f0f0;
-    font-family: Arial, sans-serif;
+    font-family: Futura, sans-serif;
     color: #333;
 }
 
-h1 {
+h1,h2, h3, h4, {
     color: #333;
     font-size: 24px;
 }
