--- a/main.css
+++ b/main.css
@@ -8,3 +8,44 @@ h1,h2, h3, h4, {
     color: #333;
     font-size: 24px;
 }
+table { 
+    border: 1px solid;
+}
+
+table img {
+    width: 100%; 
+    height: auto; 
+}
+
+
+table {
+    width: 100%; 
+    border-collapse: collapse; 
+    margin: 0 auto; 
+}
+
+table, th, td {
+    border: 1px solid #333;
+    padding: 10px; 
+    text-align: center; 
+}
+
+th {
+    background-color: #999; 
+}
+
+@media only screen and (max-width: 600px) {
+    table, thead, tbody, th, td, tr {
+        display: block; 
+    }
+
+    td {
+        display: flex;
+        justify-content: space-between;
+        padding: 10px;
+    }
+
+    img {
+        max-width: 100%;
+        height: auto;
+    }
