--- a/main.css
+++ b/main.css
@@ -1,7 +1,12 @@
- body {
-    background-color: #f0f0f0;
+body {
+    background: linear-gradient(to bottom, #d0e7ff, #d0ffdb);
     font-family: Futura, sans-serif;
     color: #333;
+    font-size: 24px;
+    line-height: 1.5;
+    margin: 0 auto;
+    max-width: 800px;
+    padding: 2em 2em 4em;
 }
 
 h1,h2, h3, h4, {
